--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -12,7 +12,7 @@
             ¡Hola! Soy Jordi Segura Lario, desarrollador de software con una <code class="font-extrabold text-indigo-300">sólida experiencia en PHP y Laravel</code>. Desde que comencé en este mundo, he tenido la oportunidad de trabajar en proyectos geniales y aprender muchísimo en el camino.
             <br>
             <br>
-            Actualmente, diseño y desarrollo software en Golmar Sistemas de Comunicación S.A., donde me enfoco principalmente en el backend, aunque también tengo bastante experiencia en frontend. Además de PHP y Laravel, he trabajado con tecnologías como Java, JavaFX, HTML, CSS, Bootstrap, y JavaScript. Siempre estoy <code class="text-indigo-300 font-extrabold ">buscando mejorar y aprender cosas nuevas para ofrecer las mejores soluciones posibles.</code>
+            Actualmente, diseño y desarrollo software en Golmar Sistemas de Comunicación S.A., donde me enfoco principalmente en el backend, aunque también tengo bastante experiencia en frontend. Además de <code class="font-extrabold text-indigo-300">PHP y Laravel</code>, he trabajado con tecnologías como Java, JavaFX, HTML, CSS, Bootstrap, y JavaScript. Siempre estoy <code class="text-indigo-300 font-extrabold">buscando mejorar y aprender cosas nuevas para ofrecer las mejores soluciones posibles.</code>
             <br>
             <br>
             Tengo un enfoque práctico y me gusta encontrar <code class="font-extrabold text-indigo-300">soluciones creativas a los problemas</code>. Disfruto trabajando en equipo y liderando proyectos. Creo firmemente en la importancia de un buen equilibrio entre la vida laboral y personal. En mi tiempo libre, me encanta entrenar en el gimnasio, practicar deportes, y mantenerme al día con las últimas tendencias en tecnología. También disfruto jugando videojuegos para relajarme.
@@ -20,5 +20,6 @@
             <br>
             Mi objetivo es <code class=" font-extrabold text-indigo-300">seguir creciendo profesionalmente</code> y contribuir con mis habilidades y conocimientos a proyectos emocionantes y desafiantes. ¡Estoy siempre abierto a nuevas oportunidades y colaboraciones!
         </p>
+        
     </div>
 </section>
