--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -8,49 +8,53 @@
         </div>
         <div class="relative flex flex-col justify-start mt-16">
 
-            <!-- Experience 1 -->
-            <div class="flex items-center mb-8 relative element-visible">
-                <span class="present text-white px-2 rounded-lg border-2 border-indigo-20 font-bold" data-astro-cid-j7pv25f6="" data-astro-source-file="C:/Users/jordi/Desktop/Projects/jordilario-portfolio/src/pages/index.astro" data-astro-source-loc="16:94">
-                    Actual
-                </span>
-                <div class=" bg-white/30 shadow rounded-lg p-6 border-2 border-indigo-200">
-                    <h3 class="text-lg font-semibold text-indigo-100">Golmar Sistemas de Comunicación S.A., Cornellà</h3>
-                    <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
-                    <p class="text-indigo-200">
-                        En Golmar, soy el responsable de diseñar y desarrollar software, enfocándome principalmente en el backend aunque también modifico y creo vistas en el frontend. Utilizo tecnologías como Java/JavaFX para aplicaciones de escritorio y PHP/Laravel para el backend, además de Blade / HTML / JQuery / CSS / Bootstrap / JavaScript para el frontend. También me encargo del mantenimiento y configuración de servidores en Ubuntu, y gestiono el control de versiones con Git.	
-                    </p>
-                    <span class="text-sm text-indigo-50">Junio 2019 — Presente</span>
-                </div>
-            </div>
-    
-            <!-- Experience 2 -->
-            <div class="flex items-center mb-8 relative element-visible">
-                <div class=" bg-white/30 shadow rounded-lg p-6">
-                    <h3 class="text-lg font-semibold text-indigo-100">Fundació Privada Escoles Universitàries Gimbernat, Sant Cugat</h3>
-                    <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
-                    <p class="text-indigo-200">En la Fundación Gimbernat, migré el backend del sitio web de PHP 5 a PHP 7 y creé APIs REST. Trabajé con PHP y Zend Framework en el backend y con HTML, JQuery, CSS, Bootstrap y JavaScript en el frontend. Además, desarrollé aplicaciones móviles con PhoneGap y gestioné el control de versiones con Git.</p>
-                    <span class="text-sm text-indigo-50">Octubre 2018 — Junio 2019</span>
-                </div>
-            </div>
+            <!-- Experience Section -->
+            <section>
+                <!-- Experience 1 -->
+                <article class="flex items-center mb-8 relative element-visible">
+                    <header>
+                        <h2 class="present text-white px-2 rounded-lg border-2 border-indigo-20 font-bold">Actual</h2>
+                    </header>
+                    <div class=" bg-white/30 shadow rounded-lg p-6 border-2 border-indigo-200">
+                        <h3 class="text-lg font-semibold text-indigo-100">Golmar Sistemas de Comunicación S.A., Cornellà</h3>
+                        <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
+                        <p class="text-indigo-200">
+                            En Golmar, soy el responsable de diseñar y desarrollar software, enfocándome principalmente en el backend aunque también modifico y creo vistas en el frontend. Utilizo tecnologías como Java/JavaFX para aplicaciones de escritorio y PHP/Laravel para el backend, además de Blade / HTML / JQuery / CSS / Bootstrap / JavaScript para el frontend. También me encargo del mantenimiento y configuración de servidores en Ubuntu, y gestiono el control de versiones con Git.	
+                        </p>
+                        <span class="text-sm text-indigo-50">Junio 2019 — Presente</span>
+                    </div>
+                </article>
+                
+                <!-- Experience 2 -->
+                <article class="flex items-center mb-8 relative element-visible">
+                    <div class=" bg-white/30 shadow rounded-lg p-6">
+                        <h3 class="text-lg font-semibold text-indigo-100">Fundació Privada Escoles Universitàries Gimbernat, Sant Cugat</h3>
+                        <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
+                        <p class="text-indigo-200">En la Fundación Gimbernat, migré el backend del sitio web de PHP 5 a PHP 7 y creé APIs REST. Trabajé con PHP y Zend Framework en el backend y con HTML, JQuery, CSS, Bootstrap y JavaScript en el frontend. Además, desarrollé aplicaciones móviles con PhoneGap y gestioné el control de versiones con Git.</p>
+                        <span class="text-sm text-indigo-50">Octubre 2018 — Junio 2019</span>
+                    </div>
+                </article>
 
-            <div class="flex items-center mb-8 relative element-visible">
-                <div class=" bg-white/30 shadow rounded-lg p-6">
-                    <h3 class="text-lg font-semibold text-indigo-100">Everis, Barcelona</h3>
-                    <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
-                    <p class="text-indigo-200">En Everis, me encargué del mantenimiento de aplicaciones utilizando Java y Spring, gestionando tareas con Jira y controlando versiones con Git.</p>
-                    <span class="text-sm text-indigo-50">Julio 2018 — Octubre 2018</span>
-                </div>
-            </div>
+                <!-- Experience 3 -->
+                <article class="flex items-center mb-8 relative element-visible">
+                    <div class=" bg-white/30 shadow rounded-lg p-6">
+                        <h3 class="text-lg font-semibold text-indigo-100">Everis, Barcelona</h3>
+                        <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
+                        <p class="text-indigo-200">En Everis, me encargué del mantenimiento de aplicaciones utilizando Java y Spring, gestionando tareas con Jira y controlando versiones con Git.</p>
+                        <span class="text-sm text-indigo-50">Julio 2018 — Octubre 2018</span>
+                    </div>
+                </article>
 
-            <div class="flex items-center mb-8 relative element-visible">
-                <div class="bg-white/30 shadow rounded-lg p-6">
-                    <h3 class="text-lg font-semibold text-indigo-100">SIGMA, Helping Universities Succeed, Sant Cugat</h3>
-                    <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
-                    <p class="text-indigo-200">Durante mis prácticas en SIGMA, desarrollé aplicaciones utilizando Java con Spring y Maven, creé APIs REST, trabajé con arquitectura hexagonal y utilicé JSP y Angular. Además, gestioné el control de versiones con Git.</p>
-                    <span class="text-sm text-indigo-50">Febrero 2018 — Junio 2018</span>
-                </div>
-            </div>
-        </div>
+                <!-- Experience 4 -->
+                <article class="flex items-center mb-8 relative element-visible">
+                    <div class="bg-white/30 shadow rounded-lg p-6">
+                        <h3 class="text-lg font-semibold text-indigo-100">SIGMA, Helping Universities Succeed, Sant Cugat</h3>
+                        <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
+                        <p class="text-indigo-200">Durante mis prácticas en SIGMA, desarrollé aplicaciones utilizando Java con Spring y Maven, creé APIs REST, trabajé con arquitectura hexagonal y utilicé JSP y Angular. Además, gestioné el control de versiones con Git.</p>
+                        <span class="text-sm text-indigo-50">Febrero 2018 — Junio 2018</span>
+                    </div>
+                </article>
+            </section>
         
     </div>
     <div class="mt-9 flex justify-center element-visible">
