--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -90,9 +90,9 @@
             </div>
             
             <div class="flex flex-col gap-5 element-visible">
-                <h1 class="text-4xl font-bold text-white">!Hola!. Soy Jordi</h1>
+                <h1 class="text-4xl font-bold text-white">¡Hola! Soy Jordi, Ingeniero Informático Full-Stack en Barcelona</h1>
                 <p class="text-white text-left text-xl">
-                    Más de 6 años de experiencia en el desarrollo de software. <code class="text-indigo-300">Ingeniero informático</code> en Barcelona. <code class="text-indigo-300">Full-stack</code> con especialización en el <code class="text-indigo-300">backend</code>.
+                    Con más de <strong>6 años de experiencia en el desarrollo de software</strong>, me especializo en el <strong>desarrollo backend</strong>. Como <strong>ingeniero informático full-stack</strong> en Barcelona, he trabajado en una variedad de proyectos y tecnologías.
                 </p>
             </div>
         </div>
