--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,7 +33,7 @@
     <section class="w-full flex justify-center mt-24">
         <div class="flex flex-col gap-5">
                 <div class="flex flex-col w-full justify-center gap-4 element-visible ">
-                    <span class="flex justify-center transition hover:scale-105"><img class="w-60 h-60 rounded-full" src="/img/profile.jpg" alt="Logo Jordi Segura Lario"></span>
+                    <span class="flex justify-center transition hover:scale-105"><img class="w-60 h-60 rounded-full" src="/img/profile.webp" alt="Logo Jordi Segura Lario"></span>
                     <div class="flex items-center justify-center" >
                         <span class="download_cv gap-2 badge flex items-center transition bg-indigo-500 border border-transparent px-4 py-2 rounded-full text-white cursor-pointer h-12 hover:text-indigo-500 hover:bg-transparent hover:border hover:border-indigo-500 ">
                             <span>
