--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -90,7 +90,7 @@
             </div>
             
             <div class="flex flex-col gap-5 element-visible">
-                <h1 class="text-4xl font-bold text-white">¡Hola! Soy Jordi, Ingeniero Informático Full-Stack en Barcelona</h1>
+                <h1 class="text-4xl font-bold text-white">¡Hola! Soy Jordi Segura Lario, Ingeniero Informático Full-Stack en Barcelona</h1>
                 <p class="text-white text-left text-xl">
                     Con más de <strong class="text-indigo-300">6 años de experiencia en el desarrollo de software</strong>, me especializo en el <strong class="text-indigo-300">desarrollo backend</strong>. Como <strong class="text-indigo-300">ingeniero informático full-stack</strong> en Barcelona, he trabajado en una variedad de proyectos y tecnologías.
                 </p>
