--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import About from '../components/About.astro';
 
 ---
 
-<Layout title="Jordi Segura Lario">
+<Layout title="Jordi Segura Lario" description="Jordi Segura Lario portfolio">
 	<main class="mt-14">
 
 		<Stack />
