--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,20 +3,24 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 interface Props {
 	title: string;
+	description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="keywords" content="HTML, CSS, JavaScript, PHP, Astro, JQuery, Bootstrap, Tailwind">
+		<meta name="author" content={title}>
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		
 		<script>
 			// Asegúrate de que el DOM esté completamente cargado
 			document.addEventListener('DOMContentLoaded', () => {
