--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title, description } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/x-icon" href="/favicon.svg" />
 		<meta name="keywords" content="HTML, CSS, JavaScript, PHP, Astro, JQuery, Bootstrap, Tailwind">
 		<meta name="author" content={title}>
 		<meta name="generator" content={Astro.generator} />
