--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import About from '../components/About.astro';
 
 ---
 
-<Layout title="Jordi Segura Lario" description="Jordi Segura Lario portfolio">
+<Layout title="Jordi Segura Lario - Desarrollador de software | Portfolio" description="Descubre el portfolio de Jordi Segura Lario, un desarrollador de software con 7 años de experiencia especializado en Laravel, Tailwind, Javascript, etc. Explora proyectos destacados, habilidades y servicios ofrecidos.">
 	<main class="mt-14">
 
 		<Stack />
